@startuml
entity Item {
  * id : BIGSERIAL <<PK>>
  --
  * title : VARCHAR(255)
  * description : TEXT
  filename : VARCHAR(500)
  * count : INTEGER
  * price : DOUBLE
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity Cart {
  * id : BIGSERIAL <<PK>>
  --
  * item_id : BIGINT <<FK>>
  * count : INTEGER
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity Orders {
  * id : BIGSERIAL <<PK>>
  --
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity OrderItems {
  * id : BIGSERIAL <<PK>>
  --
  * order_id : BIGINT <<FK>>
  * item_id : BIGINT <<FK>>
  * count : INTEGER
  * price : DOUBLE
  * created_at : TIMESTAMP
}


Item ||--o{ Cart : "has many"
Item ||--o{ OrderItems : "has many"
Orders ||--o{ OrderItems : "has many"

@enduml



